Fixed compile errors & publishing